[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
plotly = "0.10"
primitive = { git = "https://github.com/Banyc/primitive.git", tag = "v0.0.24" }
tokio = { version = "1", features = ["full"] }
ureq = "2"

[dev-dependencies]
humantime = "2"
hyped = "0.1"
poem = "3"
serde = { version = "1", features = ["derive"] }
sysinfo = "0.31"
